# simbi-mcp

./: .gitignore  LICENSE  README.md  WALKTHROUGHS.md  pyproject.toml
docs/: chart-catalog.md  dashboard-design-playbook.md  simbi-visual-roadmap.md
spikes/: EXIT.md
spikes/01_pbir_reference/: NOTES.md  ReferenceDashboard.pbib.pbip  ReferenceDashboard.pbib.pbix
spikes/01_pbir_reference/ReferenceDashboard.pbib.Report/: .platform  definition.pbir
spikes/01_pbir_reference/ReferenceDashboard.pbib.SemanticModel/: .platform  diagramLayout.json
spikes/02_ms_mcp_smoke/: NOTES.md
spikes/03_playwright_extract/: NOTES.md  extract.py  reference.html
src/simbi_mcp/: __init__.py  server.py  types.py
src/simbi_mcp/dax/: linter.py
src/simbi_mcp/mockup/: annotations.py  dashboard.css  generator.py  validator.py
src/simbi_mcp/pbir/: emitter.py  extractor.py  semantic_patcher.py  templates.py  theme.py  writer.py
src/simbi_mcp/semantic/: orchestrator.py  pbi_client.py  planner.py  profiler.py  schema_reader.py
tests/: conftest.py
tests/fixtures/datasets/: sales_small.csv
tests/full/: SalesDashboard.pbip
tests/integration/: test_e2e_walkthroughs.py  test_mockup_integration.py  test_pbir_integration.py  test_server_integration.py
tests/unit/: test_annotations.py  test_dax_linter.py  test_extractor.py  test_generator.py  test_orchestrator.py  test_pbi_client.py  test_planner.py  test_profiler.py  test_schema_reader.py  test_semantic_patcher.py  test_server.py  test_templates.py  test_theme.py  test_types.py  test_validator.py  test_writer.py
(+30 files in other folders)
